# git-subrepo-rs

./: Cargo.toml  README.md
a/: .gitrepo
b/: .gitrepo
git-subrepo/: Cargo.toml
git-subrepo-cli/: Cargo.toml
git-subrepo-cli/src/: main.rs
git-subrepo-core/: Cargo.toml
git-subrepo-core/src/: commands.rs  error.rs  git_cli.rs  gitrepo.rs  lib.rs  plumbing.rs  refs.rs  remote.rs  repo.rs  subdir.rs
git-subrepo-core/tests/: gix_prune_empty_poc.rs  subdir_filter_integration_poc.rs
git-subrepo/compat/: main.rs
git-subrepo/src/: commands.rs  lib.rs  main.rs
git-subrepo/tests/: upstream_suite.rs
git-subrepo/tests/upstream-fixture/: .gitrepo
gix-filter-branch/: Cargo.toml
gix-filter-branch/src/: lib.rs
skills/: SKILL.md
xtask/: Cargo.toml
xtask/src/: main.rs
