[package]
name = "git-subrepo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "subrepo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.60", features = ["derive"] }
git-subrepo-core = { path = "../git-subrepo-core" }
