[package]
name = "git-subrepo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
gix = { workspace = true, features = ["blocking-network-client", "blocking-http-transport-curl", "merge", "revision", "tree-editor", "worktree-mutation", "index", "attributes", "excludes"] }

gix-config.workspace = true

gix-filter-branch = { path = "../gix-filter-branch" }
gix-index = "0.48.0"
gix-worktree-state = "0.27.0"
gix-worktree = "0.49.0"

[features]
poc-tests = []

[dev-dependencies]
tempfile.workspace = true
