[package]
name = "git-subrepo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true

git-subrepo-core = { path = "../git-subrepo-core" }

[features]
upstream-tests = []

[dev-dependencies]
tempfile.workspace = true
